--- a/YDAYS_BRANDSBUILDERS/Seance_4/Anatta/Scraping/Scrap-Anatta.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Seance_4/Anatta/Scraping/Scrap-Anatta.ipynb
@@ -33,7 +33,7 @@
     "driver = webdriver.Chrome(service=chrome_service)\n",
     "\n",
     "# Naviguation vers l'URL souhaitée\n",
-    "driver.get('https://kidoriman.com/')\n"
+    "driver.get('https://anatta.ca/')"
    ]
   },
   {
@@ -43,21 +43,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Recherche du nombre de rubriques de vêtements présentes sur la barre de navigation du site afin de connaître le nombre de pages à scrapper:\n",
-    "rubriques = driver.find_elements(By.XPATH, \"//nav[@class='menu-drawer__navigation']//ul[@class='menu-drawer__menu list-menu']//a[@class='menu-drawer__menu-item list-menu__itemfocus-inset']\")\n",
+    "# Recherche du nombre de rubriques de vêtements présentes sur la barre de navigation du site afin de connaître le nombre de pages à scraper:\n",
+    "time.sleep(2)\n",
+    "rubriques = driver.find_elements(By.XPATH, \"//div[@class='t4s-mb-tab__content is--active']//div[@class='shopify-section t4s-sp-section-mb-nav']//ul[@class='t4s-mb__menu']//li[@class='t4s-menu-item t4s-item-level-0']\")\n",
     "\n",
-    "nb_pages = len(rubriques) #Nombre de pages stocker dans la variable nb_pages\n",
-    "print(\"Il y'a actuellement \" + str(nb_pages) + \" catégories sur ce site. \\nLes voicis:\") #Affichage du nombre de pages présentes pour la catégorie séléctionner\n",
+    "nb_pages = len(rubriques)  # Nombre de pages stocké dans la variable nb_pages\n",
+    "print(\"Il y a actuellement \" + str(nb_pages) + \" catégories sur ce site. \\nLes voici :\")  # Affichage du nombre de pages présentes pour la catégorie sélectionnée\n",
     "\n",
-    "#Nous avons la liste genres qui contiendras les différents genres de rubriques et i qui représente l'indice à incrémenter pour accéder aux diverses éléments de la barre de navigation\n",
-    "genres, i  = [], 1 \n",
-    "for pages in range(nb_pages):\n",
-    "    #Nous avons la variage collections qui correspond aux catégories de rubriques préssentes\n",
-    "    collections = driver.find_element(\"xpath\", f'/html/body/div[1]/div[2]/header-wrapper/header/div[1]/header-drawer/details/div/div/div/nav/ul/li[{i}]/a')\n",
-    "    genre = collections.get_attribute('href') #On recupere le lien des pages que l'ont ajoutes à la catégorie genre\n",
+    "# Nous avons la liste genres qui contiendra les différents genres de rubriques\n",
+    "genres = []\n",
+    "for collections in driver.find_elements(By.XPATH, \"//div[@class='t4s-mb-tab__content is--active']//div[@class='shopify-section t4s-sp-section-mb-nav']//ul[@class='t4s-mb__menu']//li[@class='t4s-menu-item t4s-item-level-0']\"):\n",
+    "    genre = collections.find_element(By.TAG_NAME, 'a').get_attribute('href')\n",
     "    genres.append(genre)\n",
-    "    i += 1  # Assurez-vous d'incrémenter la valeur de 'i' pour chaque itération\n",
-    "print(genres)\n"
+    "\n",
+    "genres.pop(0)  # Supprimer le premier élément\n",
+    "genres.pop(-2)\n",
+    "genres.pop(-1)\n",
+    "print(genres)  # Afficher le lien directement"
    ]
   },
   {
@@ -66,15 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "produits = [] #Création du tableau où seront stocker les données."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "produits = [] #Création du tableau où seront stocker les données.\n",
     "for page in genres: #Pour le nombre de pages présentes dans la catégorie\n",
     "    i = 1 #Initialisation d'une variable i qui sera incrémenter à chaque tour de la boucle afin d'accéder aux diverses produits présents.\n",
     "    datas = 0\n",
@@ -82,40 +76,47 @@
     "    \n",
     "    for data in range(500):  #Limitation des produits à afficher\n",
     "        try: #Essayer de...\n",
-    "            #Récupérer les diverses données\n",
-    "            categorie = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[1]/div/div/div/div/h1').text \n",
-    "            produit = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[2]/div/div/div[2]/div/ul/li{[i]}/div/div[1]/div[1]/a').text            \n",
-    "            prix = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[2]/div/div/div[2]/div/ul/li{[i]}/div/div[1]/div[1]/div[2]/dl/div[2]/dd[2]/span/price-money/bdi/span').text \n",
-    "            image_element = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[2]/div/div/div[2]/div/ul/li{[i]}/div/use-animate/a/div/img')\n",
-    "            image_src = image_element.get_attribute('src')\n",
+    "            #Récupérer les diverses données             \n",
+    "            produit = driver.find_element(\"xpath\", f'/html/body/div[2]/main/section[2]/div/div/div/div/div[1]/div{[i]}/div/div[2]/div/h3/a').text            \n",
+    "            prix = driver.find_element(\"xpath\", f'/html/body/div[2]/main/section[2]/div/div/div/div/div[1]/div{[i]}/div/div[2]/div/div[1]').text \n",
+    "            \n",
+    "            #time.sleep(3) #Simplement pour l'exécution, permettre un tant de chargement des images afin de les récupérer\n",
+    "            image_element = driver.find_element(\"xpath\", f'/html/body/div[2]/main/section[2]/div/div/div/div/div[1]/div{[i]}/div/div[1]/div[1]/img[1]')\n",
+    "            image_src = image_element.get_attribute('data-srcset')\n",
     "            \n",
     "            #Afficher les diverses données\n",
-    "            print(categorie)\n",
     "            print(produit)\n",
     "            print(prix)\n",
     "            print(image_src)\n",
     "            \n",
     "            #Stocker les diverses données dans la table\n",
-    "            produits.append([categorie, produit, prix, image_src])\n",
+    "            produits.append([produit, prix, image_src])\n",
     "\n",
     "            #Initialisation du scroll vers le bas à l'aide de la bibliothèque ActionsChains qui simule la touche d'appui vers le bas\n",
     "            actions = ActionChains(driver)\n",
     "            for scroll in range(5):  #Initialiser le nombre d'appui\n",
     "                actions.send_keys(Keys.ARROW_DOWN)  # Utiliser la touche fléchée vers le bas\n",
     "                actions.perform()\n",
-    "\n",
-    "            try:#Essayer de...\n",
+    "            \n",
+    "            try: #Essayer de...\n",
     "                #Fermer la fenetre de publicité si elle active pour pouvoir accéder aux produits\n",
-    "                close_ad_button = driver.find_element(By.CLASS_NAME, 'klaviyo-close-form')\n",
+    "                close_ad_button = driver.find_element(By.CLASS_NAME, 't4smfp-icon-close')\n",
     "                close_ad_button.click()\n",
-    "            except Exception:#Si ça ne marches pas\n",
+    "            except Exception: #Si ça ne marches pas\n",
     "                pass  # Ignorer et continuer \n",
     "\n",
+    "            \n",
+    "            try: #Essayer de...\n",
+    "                #Charger plus d'éléments en cliquant sur le bouton \"Voir plus\"\n",
+    "                load= driver.find_element(\"xpath\", f'/html/body/div[2]/main/section[2]/div/div/div/div/div[2]/div/a')\n",
+    "                load.click()\n",
+    "            except Exception: #Si ça ne fonctionnes pas\n",
+    "                pass #Ignorer et continuer\n",
     "\n",
     "        except Exception: #Si l'essaye échoue..\n",
-    "            break  \n",
-    "        i += 1\n",
-    "        datas += 1\n",
+    "            break  #Sortir de la boucle et passer à autre chose\n",
+    "        i += 1 #On incrémente pour passer à l'indice suivant\n",
+    "        datas += 1 #On incrémente pour dire qu'une donnée supplémentaire vient d'etre collecter\n",
     "    print(str(datas) + \" données viennent d'être collectées.\")\n",
     "    time.sleep(3)\n",
     "\n",
@@ -129,7 +130,7 @@
    "outputs": [],
    "source": [
     "# Utilisation de join pour séparer par des points-virgules\n",
-    "resultat = \",;\".join([\";\".join(map(str, element)) for element in produits]) #Séparer les données récupérées par des \";\" afin de pouvoir récupérer les données, les stocker dans une table CSV et les importer dans une base de données\n",
+    "resultat = \";\".join([\";\".join(map(str, element)) for element in produits]) #Séparer les données récupérées par des \";\" afin de pouvoir récupérer les données, les stocker dans une table CSV et les importer dans une base de données\n",
     "print(resultat) # Affichage du résultat\n",
     "\n",
     "driver.quit() # Fermer le navigateur "
